# backendFastAPI

./: .gitlab-ci.yml  Dockerfile  README.md  docker-compose-ci.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
repositories/: base.py  hotels.py  rooms.py  users.py
src/: config.py  database.py  exceptions.py  init.py  main.py
src/app/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 2024_09_21_2358-9b5a858a9245_initial_migration.py  2024_09_22_0005-ffe1e2d09a92_add_rooms_table.py  2024_09_25_0830-fc85c1f5b318_create_users_table.py  2024_09_25_1035-ec2648c45289_update_users_table.py  2024_09_25_1854-d961d5a897c7_change_params_email_password.py  2024_10_02_1701-3d26852bed1e_create_table_bookings.py  2024_10_06_0913-c268a4407d40_create_tables_facilities_and_fooms_.py  2024_10_06_0957-0f5a25b3b07a_change_name_tables_facilities_and_fooms_.py  2024_10_06_1425-4f8ce37dba7f_substitution_autoincrement_for_rooms_.py  (+3 more)
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/schemas/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/services/: auth.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py
tests/: conftest.py  data_for_tests.py
tests/hotels/: test_db.py
tests/integration_tests/: test_auth.py
(+9 files in other folders)
